<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="altair_settings_activity_title">Altair ROM settings</string>
    <string name="altair_settings_activity_summary">Buttons, navigation, status bar, themes</string>
    <string name="altair_settings_buttons_title">Buttons</string>
    <string name="altair_settings_buttons_summary">Tweak the actions of physical buttons on the device</string>
    <string name="altair_settings_device_settings_title">Device</string>
    <string name="altair_settings_device_settings_summary">Adjust device-specific settings</string>
    <string name="altair_settings_display_title">Display</string>
    <string name="altair_settings_display_summary">Adjust various elements of the display screen</string>
    <string name="altair_settings_gestures_title">Gestures</string>
    <string name="altair_settings_gestures_summary">Adjust touchscreen gestures and button quick actions</string>
    <string name="altair_settings_lockscreen_title">Lock screen</string>
    <string name="altair_settings_lockscreen_summary">Manage lock screen settings</string>
    <string name="altair_settings_navigation_title">Navigation</string>
    <string name="altair_settings_navigation_summary">Customize navigation bar and hardware keys</string>
    <string name="altair_settings_notifications_title">Notifications</string>
    <string name="altair_settings_notifications_summary">Adjust notification settings</string>
    <string name="altair_settings_qs_title">Quick settings</string>
    <string name="altair_settings_qs_summary">Manage your quick settings tiles</string>
    <string name="altair_settings_sound_title">Sound</string>
    <string name="altair_settings_sound_summary">Adjust sound- and volume-related settings</string>
    <string name="altair_settings_status_bar_title">Status bar</string>
    <string name="altair_settings_status_bar_summary">Adjust various status bar elements</string>
    <string name="altair_settings_themes_title">Themes</string>
    <string name="altair_settings_themes_summary">Change accent color, wallpaper, etc.</string>
    <string name="altair_settings_ui_title">User interface</string>
    <string name="altair_settings_ui_summary">Adjust various elements of the user interface</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="none">None</string>
    <string name="dlg_ok">OK</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="sys_default">Default</string>
    <string name="accent_color">Accent color (default)</string>
    <string name="notification_color">Notification color</string>
    <string name="wallpaper_color">Wallpaper color</string>
    <string name="rainbow_color">Rainbow color</string>
    <string name="custom_color">Custom color</string>
    <string name="caution">Caution</string>
    <string name="delete_message">Remove selected item?</string>
    <string name="choose_app">Choose app</string>
    <string name="unit_seconds">seconds</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_steps">steps</string>
    <string name="unit_hz" translatable="false">hz</string>
    <string name="unit_pixels" translatable="false">dp</string>
    <string name="miscellaneous_category">Miscellaneous</string>
    <string name="navbar_key_action_nothing">No action</string>
    <string name="navbar_key_action_menu">Open/close menu</string>
    <string name="navbar_key_action_app_switch">Recent apps switcher</string>
    <string name="navbar_key_action_search">Search assistant</string>
    <string name="navbar_key_action_voice_search">Voice search</string>
    <string name="navbar_key_action_in_app_search">In-app search</string>
    <string name="navbar_key_action_launch_camera">Launch camera</string>
    <string name="navbar_key_action_sleep">Turn screen off</string>
    <string name="navbar_key_action_last_app">Last app</string>
    <string name="navbar_key_action_split_screen">Split screen</string>
    <string name="navbar_key_action_kill_app">Kill foreground app</string>
    <string name="navbar_key_action_play_pause_music">Play/pause music playback</string>
    <string name="navbar_key_action_torch">Toggle flashlight</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="smart_pixels_percent">Percent of pixels to disable</string>
    <string name="smart_pixels_warning_text">Smart pixels is a power saving feature. Depending on how many pixels you decide to turn off, you could see improvement in battery life. Note that in some cases, it can result in unresponsive areas on the touch screen.</string>
    <string name="lockscreen_clock_category">Clock</string>
    <string name="lockscreen_clock_font_title">Clock font</string>
    <string name="lockscreen_interface_category">Interface</string>
    <string name="lockscreen_show_carrier_title">Carrier name</string>
    <string name="lockscreen_show_carrier_summary">Display carrier name in the status bar</string>
    <string name="lockscreen_battery_info_title">Battery info</string>
    <string name="lockscreen_battery_info_summary">Display battery info when charging</string>
    <string name="lockscreen_media_category">Media</string>
    <string name="pulse_settings_title">Pulse visualizer</string>
    <string name="pulse_settings_summary">Show a bar visualizer on the lock screen while music is playing</string>
    <string name="ls_media_art_title">Media cover art</string>
    <string name="ls_media_art_summary">Display media cover art when available</string>
    <string name="ambient_media_art_title">Ambient media cover art</string>
    <string name="ambient_media_art_summary">Display media cover art on ambient display when available</string>
    <string name="ls_media_art_filter_title">Media cover art filter</string>
    <string name="ls_media_art_fade_level_title">Media cover art fade level</string>
    <string name="ls_media_art_fade_level_summary">Set media cover art fade level</string>
    <string name="ls_media_art_blur_level_title">Media art blur level</string>
    <string name="ls_media_art_blur_level_summary">Blur intensity when blur filter is applied</string>
    <string name="lockscreen_gestures_category">Gestures</string>
    <string name="lockscreen_doubletap_sleep_title">Tap to sleep</string>
    <string name="lockscreen_doubletap_sleep_summary">Double-tap on the lock screen to put device asleep</string>
    <string name="fp_success_vibrate_title">Fingerprint authentication vibration</string>
    <string name="fp_success_vibrate_summary">Vibrate when fingerprint authentication is successful</string>
    <string name="fp_error_vibrate_title">Fingerprint error vibration</string>
    <string name="fp_error_vibrate_summary">Vibrate when fingerprint authentication fails</string>
    <string name="enable_fingerprint_ripple_effect_title">Ripple effect</string>
    <string name="enable_fingerprint_ripple_effect_summary">Show ripple effect on unlock with fingerprint</string>
    <string name="lockscreen_quick_settings_title">QS on lock screen</string>
    <string name="lockscreen_quick_settings_summary">Allow swipe down on lock screen to view Quick Settings</string>
    <string name="lockscreen_enable_power_menu_title">Power menu</string>
    <string name="lockscreen_enable_power_menu_summary">Allow accessing power menu on secure lockscreen</string>
    <string name="notification_sound_vib_screen_on_title">Noisy notifications</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="notification_row_transparency_title">Translucent notifications</string>
    <string name="notification_row_transparency_summary">Set translucent background for notifications in QS</string>
    <string name="notification_row_transparency_lockscreen_title">Translucent lockscreen notifications</string>
    <string name="notification_row_transparency_lockscreen_summary">Set translucent background for notifications in lockscreen</string>
    <string name="notification_guts_kill_app_button_title">Kill app button</string>
    <string name="notification_guts_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
    <string name="notification_heads_up_category">Heads up</string>
    <string name="less_boring_heads_up_title">Limited heads up</string>
    <string name="less_boring_heads_up_summary">Display popup notifications only for alarm, dialer and messaging app</string>
    <string name="notification_heads_up_timeout_title">Timeout</string>
    <string name="notification_heads_up_timeout_summary">Time to display heads up notifications</string>
    <string name="notification_flashlight_category">Flashlight</string>
    <string name="flashlight_on_call_title">Blink flashlight for incoming call</string>
    <string name="flashlight_on_call_ignore_dnd_title">Ignore DND</string>
    <string name="flashlight_on_call_ignore_dnd_summary">Whether to flash when Do Not Disturb mode is active</string>
    <string name="flashlight_on_call_rate_title">Blink rate</string>
    <string name="show_clipboard_overlay_title">Show clipboard overlay</string>
    <string name="show_clipboard_overlay_summary">Show an overlay in the left bottom corner of the screen when something is copied to the clipboard</string>
    <string name="gradient_settings_title">Gradients customization</string>
    <string name="gradient_elements_category">System elements</string>
    <string name="gradient_colors_category">Gradient colors</string>
    <string name="qs_tile_gradient_title">QS tiles gradient</string>
    <string name="qs_tile_gradient_summary">Enable gradient backgrounds for QS tiles</string>
    <string name="qs_brightness_slider_gradient_title">QS brightness slider gradient</string>
    <string name="qs_brightness_slider_gradient_summary">Enable gradient backgrounds for QS brightness slider</string>
    <string name="volume_slider_gradient_title">Volume slider gradient</string>
    <string name="volume_slider_gradient_summary">Enable gradient backgrounds for volume slider</string>
    <string name="custom_gradient_color_mode_title">Gradient color mode</string>
    <string name="custom_gradient_start_color_title">Gradient start color</string>
    <string name="custom_gradient_end_color_title">Gradient end color</string>
    <string name="doze_display_title">Ambient display</string>
    <string name="doze_additional_settings_title">Additional settings</string>
    <string name="doze_additional_settings_summary">Customize device specific ambient display settings</string>
    <string name="doze_sensor_title">Sensor based</string>
    <string name="raise_to_wake_title">Wake up</string>
    <string name="raise_to_wake_summary">Wake up the device instead of pulsing notifications</string>
    <string name="tilt_title">Tilt</string>
    <string name="tilt_summary">Pulse notifications on tilt</string>
    <string name="pickup_title">Pick up</string>
    <string name="pickup_summary">Pulse notifications on pick up</string>
    <string name="handwave_title">Hand wave</string>
    <string name="handwave_summary">Pulse notifications on hand wave</string>
    <string name="pocket_title">Pocket</string>
    <string name="pocket_summary">Pulse notifications on removal from pocket</string>
    <string name="doze_vibrate">Vibrate</string>
    <string name="doze_vibrate_summary">Duration to vibrate when pulsing notifications</string>
    <string name="doze_on_charge_title">Always show when charging</string>
    <string name="doze_on_charge_summary">Display info when device is charging</string>
    <string name="always_on_display_schedule_title">Display schedule</string>
    <string name="always_on_display_schedule_summary">Set schedule for always on display</string>
</resources>