<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2026 crDroid Android Project
     SPDX-FileCopyrightText: 2026 Altair ROM Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/gradient_settings_title">

    <PreferenceCategory
        android:key="gradient_elements"
        android:title="@string/gradient_elements_category" >

        <com.lineage.support.preferences.SystemSettingSwitchPreference
            android:key="qs_tile_gradient"
            android:title="@string/qs_tile_gradient_title"
            android:summary="@string/qs_tile_gradient_summary" />

        <com.lineage.support.preferences.SystemSettingSwitchPreference
            android:key="qs_brightness_slider_gradient"
            android:title="@string/qs_brightness_slider_gradient_title"
            android:summary="@string/qs_brightness_slider_gradient_summary" />

        <com.lineage.support.preferences.SystemSettingSwitchPreference
            android:key="volume_slider_gradient"
            android:title="@string/volume_slider_gradient_title"
            android:summary="@string/volume_slider_gradient_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="gradient_colors"
        android:title="@string/gradient_colors_category" >

        <com.lineage.support.preferences.SystemSettingListPreference
            android:key="custom_gradient_color_mode"
            android:title="@string/custom_gradient_color_mode_title"
            android:entries="@array/custom_gradient_color_mode_entries"
            android:entryValues="@array/custom_gradient_color_mode_values"
            android:summary="%s"
            android:defaultValue="0" />

        <com.lineage.support.colorpicker.SystemSettingColorPickerPreference
            android:key="custom_gradient_start_color"
            android:title="@string/custom_gradient_start_color_title"
            android:defaultValue="#ff0000" />

        <com.lineage.support.colorpicker.SystemSettingColorPickerPreference
            android:key="custom_gradient_end_color"
            android:title="@string/custom_gradient_end_color_title"
            android:defaultValue="#ff0000" />
    </PreferenceCategory>

</PreferenceScreen>
